Fix: `TaskDate` date picker controls alignment

--- a/src/modules/dashboard/components/TaskDate/TaskDate.css
+++ b/src/modules/dashboard/components/TaskDate/TaskDate.css
@@ -40,3 +40,7 @@
   font-style: italic;
   color: var(--grey-4);
 }
+
+.datePicker {
+  margin-top: -2px;
+}
